--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,17 +1,12 @@
-$bgColor: #24292e;
-$text: #fff;
-
-@font-face {
-  font-family: 'Comic';
-  src: url('../fonts/comic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
-}
-
-body {
-  padding: 1rem;
-  margin: 0;
-  font-family: Comic, sans-serif;
-  background-color: $bgColor;
-  color: $text;
-}
+@import './styles.scss';
+@import '../fonts/stylesheet.css';
+@import './menu.scss';
+@import './menu-btn.scss';
+@import './label-btn.scss';
+@import './forms.scss';
+@import './header.scss';
+@import './main.scss';
+@import './mainTitle.scss';
+@import './navMenu.scss';
+@import './mainContent.scss';
+@import './readMore.scss';
