--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,3 @@
-@import './styles.scss';
-@import '../fonts/stylesheet.css';
 @import './menu.scss';
 @import './menu-btn.scss';
 @import './label-btn.scss';
@@ -10,3 +8,20 @@
 @import './navMenu.scss';
 @import './mainContent.scss';
 @import './readMore.scss';
+@import './container.scss';
+@import './aside.scss';
+@import './info.scss';
+@import './lang.scss';
+@import './brands.scss';
+@import './modal.scss';
+@import './feedback.scss';
+@import './call.scss';
+@import './btn.scss';
+@import './tech.scss';
+@import './BrandsPrice.scss';
+@import './footer.scss';
+@import './swiper.scss';
+@import './content.scss';
+@import './overlay.scss';
+@import './general.scss';
+@import './fonts.scss';
