--- a/src/scss/aside.scss
+++ b/src/scss/aside.scss
@@ -9,6 +9,8 @@
   transform: translateX(-150%);
   transition: all 0.3s ease;
   z-index: 10;
+  overflow-y: auto;
+  max-height: 100vh;
 }
 .aside--active {
   transform: translateX(0%);
