--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -6,6 +6,10 @@
   width: 1120px;
   z-index: 1;
 }
+.content--no-scroll{
+  height:100vh;
+  overflow: hidden;
+}
 @media (min-width: 1120px) {
   .content {
     margin-left: 320px;
